# Qmodel

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: qmodel_format.md  run_single_result_schema.json
experiment_data/models/: README.md
experiment_data/models/AIQFT/: aiqft_100_w5.qmodel  aiqft_10_w5.qmodel  aiqft_150_w5.qmodel  aiqft_20_w5.qmodel  aiqft_50_w5.qmodel
experiment_data/models/Adder/: adder_10.qmodel  adder_100.qmodel  adder_150.qmodel  adder_20.qmodel  adder_50.qmodel
experiment_data/models/BV/: bv_100_sparse.qmodel  bv_10_sparse.qmodel  bv_150_sparse.qmodel  bv_200_sparse.qmodel  bv_20_sparse.qmodel  bv_50_sparse.qmodel
experiment_data/models/Custom/: custom_back_edge_prob_12.qmodel  custom_back_edge_prob_6.qmodel  custom_ccx_ladder_counter_9.qmodel  custom_ccx_ladder_reach_15.qmodel  custom_ccx_ladder_reach_9.qmodel  custom_disconnected_product_counter_10.qmodel  custom_disconnected_product_prob_10.qmodel  (+9 more)
scripts/: generate_aiqft_models.py  generate_bv_models.py  generate_ghz_models.py  qmodel_cli.py  run_benchmarks.py  run_single.py  summarize_results.py
src/qmodel/: __init__.py  spec.py  validation.py
tests/: test_abstract_property_checking.py  test_abstract_reachability.py  test_abstract_state.py  test_abstract_trace.py  test_abstract_transition.py  test_generators.py  test_parser.py  test_qiskit_backend.py  test_quickstart_cli.py  test_reference_pipeline.py  test_run_single.py  test_spec.py
tests/models/: ccx_overlap_demo.qmodel  clifford_bell.qmodel  clifford_gate_showcase.qmodel  organization_schedule_chain.qmodel
(+115 files in other folders)
